# EDColonizationAsst

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_1_backend.md  ARCHITECTURE_2_frontend_and_runtime.md  DEVELOPMENT_README.md  GameGlass-Integration.md  LICENSE  PROJECT_SETUP.md  README.md  build-windows-installer.bat  build_flatpak.sh  buildguiinstaller.py  buildruntime.py  guiinstaller.py  guiinstallercss.py  requirements.txt  run-edca-built-arch.sh  run-edca-built-debian.sh  run-edca-built-fedora.sh  run-edca-built-rhel.sh  run-edca-built-void.sh  run-edca-built.sh  run-edca.bat  run-edca.sh  uk.codecrafter.EDColonizationAssistant.yml
backend/: .env.example  README.md  config.yaml  example.commander.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev-linux.txt  requirements-dev.txt  requirements.txt
backend/src/: __init__.py  colonization.db  config.py  launcher.py  main.py  runtime_entry.py  tray_app.py
backend/src/api/: __init__.py  carriers.py  journal.py  routes.py  settings.py  websocket.py
backend/src/models/: __init__.py  api_models.py  carriers.py  colonisation.py  colonization.py  journal_events.py
backend/src/repositories/: __init__.py  colonisation_repository.py  colonization_repository.py
backend/src/runtime/: __init__.py  app_runtime.py  app_singleton.py  common.py  environment.py  launcher_components.py  tray_components.py
backend/src/services/: __init__.py  carrier_service.py  data_aggregator.py  file_watcher.py  inara_service.py  journal_ingestion.py  journal_parser.py  system_tracker.py
backend/tests/: conftest.py
(+53 files in other folders)
