[project]
name = "ed-colonization-assistant-backend"
version = "0.0.0"
description = "Backend for Elite: Dangerous Colonization Assistant"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py311"]
include = "src/.*\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.venv
  | \\.mypy_cache
  | \\.pytest_cache
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
src_paths = ["src"]
skip = [".venv", "build", "dist", ".mypy_cache", ".pytest_cache"]
combine_as_imports = true
force_sort_within_sections = true
order_by_type = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
extend-select = [
  "E",
  "F",
  "W",
  "I",  # isort-compatible import rules via Ruff, if you choose to enable them later
]

[tool.ruff.isort]
known-first-party = ["src"]
force-sort-within-sections = true
combine-as-imports = true